--- a/jbehave/view/jbehave.resources.stories.searchTextDemo.txt.html
+++ b/jbehave/view/jbehave.resources.stories.searchTextDemo.txt.html
@@ -14,6 +14,7 @@ Scenario: Verify the search function
 Given I access Baidu site
 When I search text on Baidu
 Then I should see the search result
+When I nevigate a result link randomly
 
 
 
